# jansrediskernel

./: README.md  pyproject.toml
jansrediskernel/: kernel.json
src/jansrediskernel/: __main__.py  install_kernelspec.py  kernel.py
