[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jansrediskernel"
version = "0.0.1"
authors = [
  { name="Jan Arman Parpin", email="is@hidden.com" },
]
description = "A jupyter redis kernel."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Framework :: Jupyter :: JupyterLab :: 3"
]
dependencies = [
    "ipykernel",
    "pexpect"
]

[project.urls]
"Homepage" = "https://github.com/jans-code/jansrediskernel"
"Bug Tracker" = "https://github.com/jans-code/jansrediskernel/issues"

[project.scripts]
jansrediskernel = "jansrediskernel.install_kernelspec:install_kernelspec"